tests/misc_errors/mod.out
error: mod.li 6,9: variable `n` is not defined
    6 | var _ = n
      |         ^
error: mod.li 7,1: function `f` is not defined
    7 | f()
      | ^^^
error: mod.li 8,1: module `undefined_mod` is not defined
    8 | undefined_mod::f()
      | ^^^^^^^^^^^^^
error: mod.li 9,9: module `undefined_mod` is not defined
    9 | var _ = undefined_mod::n
      |         ^^^^^^^^^^^^^
