tests/misc_errors/mod.li
module ns {
  var n = 0
  fn f() {}
}

var _ = n
f()
undefined_mod::f()
var _ = undefined_mod::n
